--- a/css/colours.less
+++ b/css/colours.less
@@ -1,10 +1,21 @@
 @import "mdColours.less";
 
-
 // Colour Scheme
 
 @primary: @md_yellow_400;
 @secondary: @md_light_blue_A700;
+
+// Colour constants
+
+@b20: rgba(0, 0, 0, 0.2);
+@b40: rgba(0, 0, 0, 0.4);
+@b60: rgba(0, 0, 0, 0.6);
+@b80: rgba(0, 0, 0, 0.8);
+
+@w20: rgba(255, 255, 255, 0.2);
+@w40: rgba(255, 255, 255, 0.4);
+@w60: rgba(255, 255, 255, 0.6);
+@w80: rgba(255, 255, 255, 0.8);
 
 /* colors.scss & _variables.scss */
 
