--- a/css/vars.less
+++ b/css/vars.less
@@ -138,6 +138,12 @@
 	-moz-transition: 0.2s all linear;
 	-o-transition: 0.2s all linear;
 }
+.transNone {
+	transition: none!important; 
+	-webkit-transition: none!important; 
+	-moz-transition: none!important;
+	-o-transition: none!important;
+}
 
 // From Chris Coyier
 
