--- a/css/login.less
+++ b/css/login.less
@@ -1,11 +1,9 @@
 @import "vars.less";
 @import "/../icons/variables.less";
-@import "colours.less";
 
 /// Login
 
 body.login {
-	background: @text;
 	.sans;
 	#login {
 		width: 100%;
@@ -20,14 +18,12 @@ body.login {
 			position: relative;
 			float: left;
 			padding-top: 10px;
-			color: @primary;
 		}
 		#login_error, .message {
 		    border: none;
 		    padding: 0;
 		    margin-left: 0;
 		    background: none;
-		    color: @primary;
 		    .tac;
 		    box-shadow: none;
 		}
@@ -37,19 +33,15 @@ body.login {
 			}
 		}
 		a {
-			color: @textL;
 			opacity: 0.8;
 			.trans;
 			text-decoration: none!important;
 			&:hover, &:active, &:focus {
 				opacity: 1;
-				color: @textL;
 			}
 		}
 		form {
 			.box-shadow(none);
-			background: @textD;
-			background: fade(white, 5%);
 			display: flex;
 			flex-direction: column;
 			p {
@@ -60,13 +52,10 @@ body.login {
 			}
 			input[type=checkbox]:checked:before {
 				content: "\f147";
-				color: @primary;
 			}
 			#wp-submit {
-				background: @primary;
 				border: none;
 				.box-shadow(none)!important;
-				color: @textD;
 				text-decoration: none;
 				text-shadow: none;
 				.trans;
@@ -79,8 +68,6 @@ body.login {
 		    letter-spacing: 1px;
 		    font-size: 14px;
 				&:hover {
-					background: lighten(@primary, 10%);
-					color: @textD;
 				}
 			}
 			.input, input[type=checkbox], input[type=text] {
@@ -88,7 +75,6 @@ body.login {
 				appearance: none;
 				outline: 0;
 				border: 1px solid fade(white, 40%);
-				background-color: fade(white, 20%);
 				width: 90%;
 				.border-radius(3px);
 				padding: 10px 15px;
@@ -96,16 +82,15 @@ body.login {
 				display: block;
 				.tac;
 				font-size: 18px;
-				color: white;
 				.trans;
 				font-weight: 400;
 				&:hover{
-					background-color: fade(white, 40%);
 				}
 				&:focus{
-					background-color: white;
 					width: 100%;
-					color: @secondary;
+				}
+				&#aiowps-captcha-answer {
+					width: auto;
 				}
 			}
 			input[type=checkbox] {
@@ -116,12 +101,10 @@ body.login {
 				margin-bottom: 3px;
 				margin-right: 5px;
 				&:focus{
-					background-color: fade(white, 40%);
 					width: 16px;
 				}
 			}
 			label {
-				color: fade(white, 50%);
 		    font-size: 14px;
 		    .tac;
 		    width: 100%;
@@ -148,9 +131,10 @@ body.login {
 		width: 300px;
 		margin: 0 auto;
 		text-align: center;
-		color: @primary;
 	}
 }
+
+// Login Plugins
 
 // Jetpack
 
@@ -161,3 +145,10 @@ body.login {
   margin: 0 auto;
 }
 
+// All in One WP Security
+
+.aiowps-captcha-equation {
+  text-align: center;
+  font-size: 20px;
+  line-height: 2;
+}
